<!--
    strings.xml
    PROG3210 Assignment 3

    Revision History
        Junseo Yang, 2023-12-10: Created
-->
<resources>
    <string name="app_name">Assignment3</string>

    <!-- Nav -->
    <string name="top_app_bar">Memory Game</string>
    <string name="nav_title_welcome">Welcome</string>
    <string name="nav_title_game">Game</string>
    <string name="nav_title_high_score">High Score</string>
    <string name="nav_item_welcome">Welcome</string>
    <string name="nav_item_game">Game</string>
    <string name="nav_item_high_score">High Score</string>

    <!-- Errors -->
    <string name="error_invalid_selection">Invalid Selection</string>

    <!-- Place Holder -->
    <string name="placeholder">Placeholder</string>

    <!-- Welcome -->
    <string name="welcome_title">Memory game</string>
    <string name="welcome_instruction">
        How to play
        \n1. Enter your name to record high score!
        \n2. Highlight tiles before time\'s up!
        \n3. If the tiles matched, you\'ll earn points!
        \n4. You have 3 chances!
        \n
        \nGame Description
        \n1. You have 3 lives.
        \n2. Start with 4 Tiles and 10 points per round.
        \n3. You should select more tiles per 3 rounds.
        \n4. You\'ll earn more points per 3 rounds.
    </string>
    <string name="welcome_username_hint">Enter your username</string>
    <string name="welcome_play_button">Play</string>
    <string name="welcome_username_warning">Username is empty. You can\'t record your high score. Are you sure you want to proceed?</string>

    <!-- Game -->
    <string name="game_title">Memory game</string>
    <string name="game_start_button">Start</string>
    <string name="game_quit_button">Quit</string>
    <string name="game_tag_00">00</string>
    <string name="game_tag_01">01</string>
    <string name="game_tag_02">02</string>
    <string name="game_tag_03">03</string>
    <string name="game_tag_04">04</string>
    <string name="game_tag_05">05</string>
    <string name="game_tag_10">10</string>
    <string name="game_tag_11">11</string>
    <string name="game_tag_12">12</string>
    <string name="game_tag_13">13</string>
    <string name="game_tag_14">14</string>
    <string name="game_tag_15">15</string>
    <string name="game_tag_20">20</string>
    <string name="game_tag_21">21</string>
    <string name="game_tag_22">22</string>
    <string name="game_tag_23">23</string>
    <string name="game_tag_24">24</string>
    <string name="game_tag_25">25</string>
    <string name="game_tag_30">30</string>
    <string name="game_tag_31">31</string>
    <string name="game_tag_32">32</string>
    <string name="game_tag_33">33</string>
    <string name="game_tag_34">34</string>
    <string name="game_tag_35">35</string>
    <string name="game_tag_40">40</string>
    <string name="game_tag_41">41</string>
    <string name="game_tag_42">42</string>
    <string name="game_tag_43">43</string>
    <string name="game_tag_44">44</string>
    <string name="game_tag_45">45</string>
    <string name="game_tag_50">50</string>
    <string name="game_tag_51">51</string>
    <string name="game_tag_52">52</string>
    <string name="game_tag_53">53</string>
    <string name="game_tag_54">54</string>
    <string name="game_tag_55">55</string>
    <string name="game_life_title">Life</string>
    <string name="game_score_title">Score</string>
    <string name="game_timer_title">Timer</string>
    <string name="game_start_message">Game started!</string>
    <string name="game_end_message">Game ended!</string>
    <string name="game_win_message">You got it!</string>
    <string name="game_lose_message">Not quite!</string>

    <!-- High Score -->
    <string name="high_score_title">Top 3 High Scores</string>
    <string name="high_score_shared_preference">memory_game_high_scores</string>
    <string name="high_score_data_default">There\'s no high score data</string>
</resources>